--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "react-router": "^7.7.0",
     "validator": "^13.15.15"
   }
 }
